many ui improvements, fullscreen video

--- a/camera.html
+++ b/camera.html
@@ -45,11 +45,11 @@
         	</div>-->
 
         	<!-- Connect to target device -->
-          <div id="floating" class="unconnected-ui">
-            <span style="font-size:30px; color:#222222; text-align:center">Camera ID</span><br>
-            <span id="my-id" style="font-size:40px; color:#555555">...</span>
+          <div class="camera-ui" class="unconnected-ui">
+            <span style="font-size:40px; color:#777777; text-align:center">Camera ID</span><br>
+            <span id="my-id" style="font-size:55px; color:#777777">...</span>
           </div>
-
+<!--
         	<div id="step2">
         		<div style="float:left; padding-top:16px; padding-left: 20px; padding-right: 50px">
 
@@ -65,7 +65,7 @@
 	          		</div>
 	          		
           		</div>
-
+-->
           		
         	</div>
         	<img id="picture" style="position:fixed; top:500px; left:670px; width:320px; height:240px; background-color:#DDDDDD"></img>
