--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    </div>
 
       	<!-- Steps -->
-      	<div class="pure-u-1-3">
+      	<div class="ui">
         	<!-- Get local audio/video stream -->
         	<!--<div id="step1">
           		<p>Please click `allow` on the top of the screen so we can access your webcam and microphone for calls.</p>
@@ -36,34 +36,24 @@
         	</div>-->
 
         	<!-- Connect to target device -->
-        	<div id="step2">
-        		<div style="float:left; padding-top:16px; padding-left: 20px; padding-right: 50px">
-
-          			<div class="unconnected-ui" style="z-index: 0; position:relative">
-          				<span style="font-size:20px">Connect to device</span><br>
-            			<input type="text" placeholder="Connect to user id..." id="callto-id">
-            			<input class="button" type="button" id="make-connection" value="Connect">
-            			<input class="button" type="button" id="make-call" value="Request camera">
-          			</div>
-          			<div class="connected-ui" style="z-index: 0; position:relative">
-          				<span style="font-size:20px">Connected to device</span><br>
-          				<input class="button" type="button" id="end-call" value="End Call">
-          				<input class="button" type="button" id="take-photo" value="Take Photo">
-          			</div>
-          			<div class="sharing-ui" style="z-index: 0; position:relative">
-          				<span style="font-size:20px; color:#cc0000">Sharing Camera</span><br>
-          				<input class="button" type="button" id="end-call" value="End Call">
-          			</div>
-          			<div style="position:fixed; top:580px">
-	        			<p>Your id: <span id="my-id" style="color:#AAAAAA">...</span></p>
-	          			<p>Share this id with others so they can connect with you.</p>
-	          		</div>
-	          		
-          		</div>
-
-          		
+        	<div class="pc-ui">
+          		<span style="color:#777777; font-size:35px" id="status">Connect to device</span><br>
+            	<input type="text" placeholder="Connect to user id..." id="callto-id">
+            	<input class="button" type="button" id="make-connection" value="Connect">
+            	<input class="button" type="button" id="make-call" value="Request camera" style="display:none">
         	</div>
-        	<img id="picture" style="position:fixed; top:500px; left:670px; width:320px; height:240px; background-color:#DDDDDD"></img>
+
+        	<div id="shutter" class="connected-ui">
+            	<div id="outer-shutter"></div>
+            	<div id="inner-shutter"></div>
+        	</div>
+
+        	<div style="position:fixed; bottom:5%; display:none">
+	        	<p>Your id: <span id="my-id" style="color:#AAAAAA">...</span></p>
+	          	<p>Share this id with others so they can connect with you.</p>
+	        </div>
+
+        	<img id="picture" style="position:fixed; top:10px; right:10px; width:200px; height:150px; background-color:#DDDDDD"></img>
       	</div>
   	</div>
 
