--- a/camera.html
+++ b/camera.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 	<script type="text/javascript" src="https://skyway.io/dist/0.3/peer.js"></script>
 	<!--<script type="text/javascript" src="js/bootstrap.js"></script>-->
-	<script type="text/javascript" src="js/remote-camera.js"></script>
+	<script type="text/javascript" src="js/camera.js"></script>
   <script>
 
     $(document).ready(function() {
