--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 	          	<p>Share this id with others so they can connect with you.</p>
 	        </div>
 
-        	<img id="picture" style="position:fixed; top:10px; right:10px; width:200px; height:150px; background-color:#DDDDDD"></img>
+	        <div id="photo-stream" class="connected-ui">
+	        	<div id="head"></div>
+        		<img id="picture" style="position:fixed; top:10px; right:10px; width:225px; height:168.75px; background-color:#DDDDDD"></img>
+        	</div>
       	</div>
   	</div>
 
