--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
 	          	<p>Share this id with others so they can connect with you.</p>
 	        </div>
 
-	        <div id="photo-stream" class="connected-ui">
-	        	<div id="head"></div>
-        		<img id="picture" style="position:fixed; top:10px; right:10px; width:225px; height:168.75px; background-color:#DDDDDD"></img>
-        	</div>
+	        <div id="photo-stream" class="connected-ui"></div>
       	</div>
   	</div>
 
