--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         	<!-- Connect to target device -->
         	<div class="pc-ui">
           		<span style="color:#777777; font-size:35px" id="status">Connect to device</span><br>
-            	<input type="text" placeholder="Device ID" id="callto-id">
+            	<input type="text" id="callto-id" style="height:40px; width:100px; font-size:35px; text-align:center">
             	<br>
             	<div id="connect-button" class="custom-button">
             		<span style="color:#AACCFF; font-size:20px" id="make-connection">Connect</span>
