reintroduction of status display

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             		<span style="color:#AACCFF; font-size:20px" id="make-connection">Connect</span>
             	</div>
             	<div id="call-button" class="custom-button">
-            		<span style="color:#AACCFF; font-size:20px" id="make-connection">Call</span>
+            		<span style="color:#AAFFCC; font-size:20px" id="make-connection">Call</span>
             	</div>
         	</div>
 
@@ -59,6 +59,10 @@
 	        </div>
 
 	        <div id="photo-stream" class="connected-ui"></div>
+
+	        <div id="status-button" class="custom-button">
+	        	<span style="color:#555555; font-size:20px">Status</span>
+	        </div>
       	</div>
   	</div>
 
