end call button

--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
 
 	        <div id="photo-stream" class="connected-ui"></div>
 
-	        <div id="status-button" class="custom-button">
+	        <div id="status-button" class="custom-button" class="connected-ui">
 	        	<span style="color:#555555; font-size:20px">Status</span>
 	        </div>
+	        <div id="end-call" class="custom-button" class="connected-ui">
+	        	<span style="color:#555555; font-size:20px">End</span>
+	        </div>
+
       	</div>
   	</div>
 
