improved handling of ending the call, added some fading animations for UI elements

--- a/camera.html
+++ b/camera.html
@@ -34,6 +34,11 @@
         <!-- Necessary for sending photos to PC -->
         <img id="picture" style="display:none; width:320px; height:240px; background-color:#DDDDDD"></img>
 
+        <!-- Disconnected UI -->
+        <div class="disconnected-ui">
+            <span style="color:#995555; font-size:38px">Session closed</span>
+        </div>
+
     </div>
 
 </body>
