--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 		    </div>
 		</div>
 
+		<!-- Disconnected UI -->
+		<div class="disconnected-ui">
+			<span style="color:#995555; font-size:38px">Session closed</span>
+		</div>
+
     </div>
 
 </body>
